# MemoPilot

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
src/memopilot/: config.py  generator.py  llm.py  models.py  output.py  prompt.py  store.py  tags.py  token_estimate.py  ui.py  ui_components.py  ui_generate.py  ui_history.py
tests/: test_prompt.py  test_store_output.py
