[project]
name = "memopilot"
version = "0.1.0"
description = "Full-context enterprise meeting minutes generator using user-provided historical text examples."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.82.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.8",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

